# reporag-ai_2

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  Dockerfile  GITHUB_ISSUES.md  ISSUES_TRACKER.md  MILESTONES.md  POD_GUIDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
_internal/: PROJECT_CONTEXT.md
alembic/: env.py
alembic/versions/: 657768eb3366_initial_schema.py  7e00daba56ca_initial_schema_with_constraints_and_.py  a0a25a74e9a4_initial_schema.py  cf740213d9a8_initial_schema.py  da46327d8019_initial_schema.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  RUNBOOK.md
examples/: sample_queries.json
examples/sample_repo/: app.py  auth.py  db.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
scripts/: ascii_guard.sh  check_ascii.py  check_ascii.sh  check_internal_data.sh  create_github_issues.sh  internal_data_guard.sh
src/reporag/: config.py
tests copy/unit/: test_cloner.py  test_config.py  test_db.py  test_health.py
tests/integration/: test_e2e_query.py  test_ingestion_pipeline.py  test_retrieval_pipeline.py
tests/unit/: test_api.py  test_call_graph.py  test_check_ascii.py  test_chunker.py  test_cloner.py  test_config.py  test_db.py  test_embedder.py  test_fusion.py  test_health.py  test_parser.py  test_planner.py  test_precommit.py  test_retrieval.py  test_scaffold.py  test_smoke.py  (+1 more)
(+47 files in other folders)
